feat: Complete EKS Chaos Guardian implementation
Infrastructure:
- EKS cluster (Kubernetes 1.29) with cost optimization
- Lambda functions for chaos engineering and detection
- S3 + DynamoDB for runbook storage and state management
- API Gateway for web interface
- Terraform backend with S3 + DynamoDB locking

Features:
- Autonomous fault injection and detection
- AI-powered root cause analysis with Bedrock
- Automated remediation with runbook learning
- Cost-optimized to ~/month
- Web UI dashboard for demo

Files:
- Complete Lambda function implementations
- Demo scenarios for testing
- Comprehensive documentation
- Cost optimization strategies
- Ready for AWS AI Agent Hackathon demo

--- a/infra/.gitignore
+++ b/infra/.gitignore
@@ -101,6 +101,7 @@ aws-credentials.json
 *.tfvars
 *.tfvars.json
 .terraform/
+.terraform.lock.hcl
 crash.log
 crash.*.log
 *.tfplan
@@ -317,5 +318,3 @@ demo-output/
 chaos-results/
 runbook-cache/
 agent-cache/
-
-*.zip
